# LKIF

./: LICENSE  README.md  example.ipynb
IF_3.0/: README.md  pyproject.toml
IF_3.0/LK_Info_Flow/: __ini__.py  causal.py
IF_3.0/LK_Info_Flow.egg-info/: PKG-INFO
IF_3.1/: pyproject.toml
IF_3.1.1/R/: LK_Info_Flow.R  case1_data.txt  case3_panel_data_causality.r  case5_causal_graph.r  case7_1.txt  case7_2.txt  case7_cross_correlated_noise.R  case7_data_2.mat  case7_data_3.mat  case7_data_4.mat  case7_plot.R  case8_time_varing.R
IF_3.1.1/matlab/: causality_est_panel.m  groups_est.m  multi_causality_est.m  multi_causality_est_all_panel_tau.m  readme.md  tau_est.m
IF_3.1/LK_Info_Flow/: causal.py
IF_3.1/LK_Info_Flow.egg-info/: top_level.txt
IF_3.1/LK_Info_Flow/examples/: case1_bivariate_causality.py  case4_subsystems.py  case5_causal_graph.py  case7_cross_correlated_noise.py  case8_time varying.py
IF_3.1/R/: LK_Info_Flow.R  case1_bivariate_causality.R  case2_multivariable_causality.R  case7_data_1.mat
IF_3.1/matlab/: causality_est.m  multi_causality_est_all_new_tau.m
IF_3.1/python/: README.md  pyproject.toml
IF_3.1/python/LK_Info_Flow/: __ini__.py
IF_3.1/python/LK_Info_Flow.egg-info/: SOURCES.txt
IF_3.1/python/LK_Info_Flow/examples/: example.ipynb
IF_3.1/python/LK_Info_Flow/examples/data/: case7_data2.mat
codes/R/: LK_Info_Flow.R  case1_bivariate_causality.R  case2_multivariable_causality.R  case3_data_X.txt  case3_panel_data_causality.r  case4_subsystems.R  case5_causal_graph.r  case7_data_1.mat  case8_time_varing.R
paper/: paper.bib  paper.md
(+47 files in other folders)
