[project]
name = "LK_Info_Flow"
version = '3.1.1'
description='Liang Information Flow Package'
authors = [
  {name = "Yineng Rong", email = "yinengrong@foxmail.com"},
  {name = "X. San Liang", email = "xsanliang@fudan.edu.cn"},
]
maintainers = [
  {name = "Yineng Rong", email = "yinengrong@foxmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
        "numpy",
        "scipy",
        "graphviz"
    ]

readme = "README.md"
